# ototap

./: LICENSE  README.md  index.html  package.json  tsconfig.json
src/: App.css  App.tsx  interval.test.ts  interval.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
