[package]
name = "ototap"
version = "0.1.0"
description = "A compact Windows auto-clicker"
authors = ["OtoTap"]
edition = "2021"

[lib]
name = "ototap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
enigo = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
